--- a/Task-Management/frontend/task-managent/package.json
+++ b/Task-Management/frontend/task-managent/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
+    "react-calendly": "^4.4.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2"
