--- a/Task-Management/data/projects.json
+++ b/Task-Management/data/projects.json
@@ -1,12 +1,24 @@
 {
   "projects": [
     {
-      "id": "1",
-      "projectName": "task manager"
-    },
-    {
       "id": "1feb",
       "projectName": "test"
+    },
+    {
+      "id": "1b41",
+      "projectName": "hai"
+    },
+    {
+      "id": "1f48",
+      "projectName": "hai"
+    },
+    {
+      "id": "bd7b",
+      "projectName": "myprject"
+    },
+    {
+      "id": "f5af",
+      "projectName": "newproject"
     }
   ]
 }
