--- a/Task-Management/backend/Tasker/src/main/resources/application.properties
+++ b/Task-Management/backend/Tasker/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Tasker
-spring.datasource.url=jdbc:mysql://localhost:3306/tasker
+spring.datasource.url=jdbc:mysql://localhost:3306/tasker?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
