--- a/Task-Management/backend/Tasker/src/main/resources/application.properties
+++ b/Task-Management/backend/Tasker/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=Tasker
 spring.datasource.url=jdbc:mysql://localhost:3306/tasker?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Chandu@24
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+server.port=8082
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
