login using jwt,auth

--- a/Task-Management/backend/Tasker/src/main/resources/application.properties
+++ b/Task-Management/backend/Tasker/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+spring.main.allow-circular-references=true
+jwt.secret=Y0uR$up3r$S3cur3K3y_With_Enough_Length_123!dhuH
+jwt.expiration=1200000 
+
