--- a/Task-Management/backend/Tasker/src/main/resources/application.properties
+++ b/Task-Management/backend/Tasker/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.defer-datasource-initialization=true
 spring.main.allow-circular-references=true
 jwt.secret=Y0uR$up3r$S3cur3K3y_With_Enough_Length_123!dhuH
 jwt.expiration=1200000
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
